--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,34 +1,43 @@
-name: Python CI with Matrix
-
+name: workflow variables
 on:
-  push:
-
+ push:
+env:
+ PYTHON_VERSION: 3.9
 jobs:
-  test:
-    runs-on: ${{ matrix.os }}
+  job1:
+   runs-on: ubuntu-latest
+   steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    - name: Setup python ${{ env.PYTHON_VERSION }}
+      uses: actions/setup-python@v5
+      with:
+       python-version: ${{ env.PYTHON_VERSION }}
+  job2:
+   runs-on: ubuntu-latest
+   env:
+     MYJOB-PYTHON-VERSION: 3.8
+   steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    - name: Setup python ${{ env.MYJOB-PYTHON-VERSION }}
+      uses: actions/setup-python@v5
+      with:
+       python-version: ${{ env.MYJOB-PYTHON-VERSION }}
+  job3:
+   runs-on: ubuntu-latest
+   steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    - name: Setup python
+      env:
+       MYSTEP-PYTHON-VERSION: 3.11
+      uses: actions/setup-python@v5
+      with:
+       python-version: ${{ env.MYSTEP-PYTHON-VERSION }}
+    - name: Print a message
+      env:
+       APPLICATION: python
+      run: echo "The application installed is $APPLICATION"
+   
 
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]
-        python-version: [3.8, 3.9]
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      
-      - name: Set PYTHONPATH
-        run: echo "PYTHONPATH=$GITHUB_WORKSPACE" >> $GITHUB_ENV
-
-      - name: Run tests
-        run: |
-          pytest
