--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           python-version: ${{ vars.PYTHON_VERSION }}
 
-      - name: Install dependencies
+      - name: Install python dependencies
         run: |
           pip install --upgrade pip
           pip install -r requirements.txt
