--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Set PYTHONPATH
         run: echo "PYTHONPATH=$GITHUB_WORKSPACE" >> $GITHUB_ENV
-
+// this take value of GITHUB_WORKSPACE which is root direstory assign to PYTHONPATH and save it in file GITHUB_ENV
       - name: Run tests
         env:
           mycmd: ${{ vars.PYTHONCMD }}
